# ros_babel_fish

./: README.md
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: lint-and-test.yaml
ros2_babel_fish/: CMakeLists.txt  package.xml
ros2_babel_fish/benchmark/: message.cpp
ros2_babel_fish/examples/: action_client.cpp  any_publisher.cpp  any_subscriber.cpp  service_client.cpp  service_server.cpp  troll_node.cpp
ros2_babel_fish/include/ros2_babel_fish/: babel_fish.hpp  macros.hpp  method_invoke_helpers.hpp
ros2_babel_fish/include/ros2_babel_fish/detail/: babel_fish_action_client.hpp  babel_fish_action_server.hpp  babel_fish_publisher.hpp  babel_fish_service.hpp  babel_fish_service_client.hpp  babel_fish_subscription.hpp  topic.hpp
ros2_babel_fish/include/ros2_babel_fish/exceptions/: babel_fish_exception.hpp
ros2_babel_fish/include/ros2_babel_fish/idl/: serialization.hpp  type_support.hpp  type_support_provider.hpp
ros2_babel_fish/include/ros2_babel_fish/idl/providers/: local_type_support_provider.hpp
ros2_babel_fish/include/ros2_babel_fish/messages/: array_message.hpp  compound_message.hpp  message.hpp  message_type_traits.hpp  message_types.hpp  value_message.hpp
ros2_babel_fish/src/: babel_fish.cpp  logging.hpp  test_messages.h  test_node.cpp
ros2_babel_fish/src/detail/: babel_fish_action_client.cpp  babel_fish_publisher.cpp  babel_fish_service.cpp  babel_fish_service_client.cpp  babel_fish_subscription.cpp  topic.cpp
ros2_babel_fish/src/idl/: serialization.cpp  type_support_provider.cpp
ros2_babel_fish/src/idl/providers/: local_type_support_provider.cpp
ros2_babel_fish/src/messages/: array_message.cpp  compound_message.cpp  message.cpp
ros2_babel_fish/test/: action_client.cpp  common.hpp  message.cpp  message_comparison.hpp  message_decoding.cpp  message_encoding.cpp  service_client.cpp
ros2_babel_fish_test_msgs/: CMakeLists.txt  package.xml
ros2_babel_fish_test_msgs/msg/: TestMessage.msg  TestSubArray.msg
ros_babel_fish/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_babel_fish/benchmark/: message.cpp
ros_babel_fish/examples/: action_client.cpp  any_publisher.cpp  any_subscriber.cpp  service_client.cpp  service_server.cpp  troll_node.cpp
ros_babel_fish/include/ros_babel_fish/: babel_fish.hpp  macros.hpp  method_invoke_helpers.hpp
ros_babel_fish/include/ros_babel_fish/detail/: any_service_callback.hpp  babel_fish_action_client.hpp  babel_fish_action_server.hpp  babel_fish_publisher.hpp  babel_fish_service.hpp  babel_fish_service_client.hpp  babel_fish_subscription.hpp  topic.hpp
ros_babel_fish/include/ros_babel_fish/exceptions/: babel_fish_exception.hpp
ros_babel_fish/include/ros_babel_fish/idl/: exceptions.hpp  serialization.hpp  type_support.hpp  type_support_provider.hpp
ros_babel_fish/include/ros_babel_fish/idl/providers/: local_type_support_provider.hpp
ros_babel_fish/include/ros_babel_fish/messages/: array_message.hpp  compound_message.hpp  message.hpp  message_type_traits.hpp  message_types.hpp  value_message.hpp
ros_babel_fish/src/: babel_fish.cpp  logging.hpp  test_messages.h  test_node.cpp
ros_babel_fish/src/detail/: babel_fish_action_client.cpp  babel_fish_publisher.cpp  babel_fish_service.cpp  babel_fish_service_client.cpp  babel_fish_subscription.cpp  topic.cpp
ros_babel_fish/src/idl/: serialization.cpp  type_support_provider.cpp
ros_babel_fish/src/idl/providers/: local_type_support_provider.cpp
ros_babel_fish/src/messages/: array_message.cpp  compound_message.cpp  message.cpp
ros_babel_fish/test/: action_client.cpp  common.hpp  message.cpp  message_comparison.hpp  message_decoding.cpp  message_encoding.cpp  service_client.cpp
ros_babel_fish_test_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ros_babel_fish_test_msgs/msg/: TestArray.msg
