<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_babel_fish</name>
  <version>0.9.0</version>
  <description>
    A runtime message handler for ROS.
    Allows subscription, publishing, calling of services and actions with messages known only at runtime as long
    as they are available in the local environment.
  </description>
  <maintainer email="ros2_babel_fish@stefanfabian.me">Stefan Fabian</maintainer>
  <license>MIT</license>

  <author email="ros2_babel_fish@stefanfabian.me">Stefan Fabian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <test_depend>example_interfaces</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>hector_ros2_utils</test_depend>
  <test_depend>ros2_babel_fish_test_msgs</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
