<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_babel_fish</name>
  <version>0.9.3</version>
  <description>
    A runtime message handler for ROS.
    Allows subscription, publishing, calling of services and actions with messages known only at runtime as long
    as they are available in the local environment.
  </description>
  <maintainer email="ros_babel_fish@stefanfabian.me">Stefan Fabian</maintainer>
  <license>MIT</license>

  <author email="ros_babel_fish@stefanfabian.me">Stefan Fabian</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rcpputils</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <build_depend>action_tutorials_interfaces</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_clang_format</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>example_interfaces</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>ros_babel_fish_test_msgs</test_depend>
  <test_depend>std_msgs</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
